--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,6 +1,6 @@
 * {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
+	font-family: "Comic Sans MS", Helvetica, Arial, cursive, sans-serif;
+	font-size: 18px;
 }
 
 .header {
@@ -32,7 +32,7 @@
 	bottom: 20px;
 	left:650px;
 	overflow-y: scroll;
-	width:270px;
+	width:350px;
 }
 
 ul {
@@ -41,7 +41,7 @@ ul {
 	margin-top: 0px;
 }
 
-li a { 
+li a {
 	text-decoration:none;
 	display: block;
 	color: #000000;
@@ -50,31 +50,42 @@ li a {
 }
 
 li a:hover {
-	background-color: #4B0A1E;
-	color: #BA8A92;
+	background-color: #4B0082;
+	color: 	#1E90FF;
 }
 
 input, textarea {
-  border:1px solid #ccc;
-  min-height:30px;
-  outline: none;
+	border:1px solid #ccc;
+	min-height:30px;
+	outline: none;
 }
 
 .mainArea input {
-  margin-bottom:15px;
-  margin-top:5px;
-  width:280px;
+	margin-bottom:15px;
+	margin-top:5px;
+	width:280px;
 }
 
 textarea {
 	margin-bottom:15px;
-  	margin-top:5px;
+	margin-top:5px;
 	height: 200px;
-  	width:250px;
+	width:250px;
 }
 
 label {
 	display:block;
+}
+
+h1 {
+	font-size: 25px;
+	font-style: bold;
+	color: #4B0082;
+}
+
+name{
+	font-style: bold;
+	color: #4B0082;
 }
 
 button {
